--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div style="background-image:url(Imagenes/img43.png)"></div>
 			<div style="background-image:url(Imagenes/img48.png)"></div>
 			<div style="background-image:url(Imagenes/img53.png)"></div>
-			
+			<p>HOLA</p>
 			<div style="background-image:url(Imagenes/img62.png)"></div>
 			<div style="background-image:url(Imagenes/img65.png)"></div>
 			<div style="background-image:url(Imagenes/img70.png)"></div>
